<resources>
    <string name="app_name">eezy</string>
    <string name="login">Login</string>
    <string name="login_google">LOGIN</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_payment">Add Payment Method</string>
    <string name="complete">Complete</string>
    <string name="rent_bike">Rent Bike</string>
    <string name="reserve_bike">Reserve Bike</string>
    <string name="sign_in_option">Don\'t have an account?</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_distance">Current Distance</string>
    <string name="current_price">Current Price</string>
    <string name="charge_level">Level of Charge</string>
    <string name="bike" translatable="false">Bike</string>
    <string name="welcome" >Welcome</string>
    <string name="field_empty_error" >"Field can't be empty"</string>
    <string name="mail_invalid_error" >"Please enter a valid Email address"</string>
    <string name="mail_duplicate_error" >"Email is already used"</string>
    <string name="password_weak_error" >"Password too weak"</string>
    <string name="password_mismatch_error" >"Password is not the same"</string>
    <string name="google_signin_error" >"Google sign in failed :("</string>
    <string name="provider_enabled" >"The Provider was enabled"</string>
    <string name="provider_disabled" >"The Provider was disabled"</string>
    <string name="bike_booked" >"You booked the bike"</string>
    <string name="wrong_code" >"You entered the wrong code"</string>
    <string name="authentication_error" >"Authentication failed."</string>
    <string name="history">History</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="scan_code">Scan Code</string>
    <string name="cancel">Cancel</string>
    <string name="reservation">The bike is reserved for</string>
    <string name="pause_ride">Pause Ride</string>
    <string name="ride_paused">Your ride was paused</string>
    <string name="ride_continued">Your ride was continued</string>
    <string name="return_bike">Return bike</string>
    <string name="no_bikes_available">There are currently no bikes available</string>
    <string name="continue_ride">Continue Ride</string>
    <string name="view_reservation">View reservation</string>
    <string name="deposit_warning">Following amount will be deposited from your account:</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="how_to_ride">How to Ride</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="payment_method">Payment Method</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="credit_card">Credit Card</string>
    <string name="googlepay" translatable="false">GooglePay</string>
    <string name="bike_id" translatable="false">Bike ID</string>
    <string name="availability">available</string>
    <string name="code">Code</string>
    <string name="enter">Enter</string>
    <string name="price_value" translatable="false">0.0 SEK</string>
    <string name="distance_value" translatable="false">0.0 km</string>
    <string name="charge_value" translatable="false">0 %</string>
    <string name="question_one" translatable="false">What does \'Lorem Ipsum\' mean?</string>
    <string name="answer_one" translatable="false">\'Lorem Ipsum\' is a dummy text that is not meant to mean anything. It is used as a placeholder in layouts, for example, in order to give an impression of the finished document. The text is intentionally unintelligible so that the viewer is not distracted by the content. The language is not real Latin and even the first word ‘Lorem’ does not exist.</string>
    <string name="question_two" translatable="false">Where does it come from?</string>
    <string name="answer_two" translatable="false">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</string>
    <string name="question_three" translatable="false">Why do we use it?</string>
    <string name="answer_three" translatable="false">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="question_four">Where can I get some?</string>
    <string name="answer_four" translatable="false">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable.</string>
    <string name="how_to_ride_text" translatable="false">"1. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. \n2. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, \nconsetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. \n3. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. \n4. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. \n5. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.     "</string>
    <string name="max_time" translatable="false">30:00</string>
    <string name="bike_returned">You have returned the bike!</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="use_location">Do you want to turn your location on?</string>
    <string name="location_off">Your location is turned off!</string>
    <string name="charge">charge</string>
    <string name="distance">distance</string>
    <string name="price">price</string>
    <string name="stay_on_page">You can\'t leave this page if you have an ongoing reservation</string>
    <string name="bike_status" translatable="false">Bike Status</string>

</resources>

