<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="60sp"
        android:layout_marginEnd="60sp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:text="@string/create_account"
        android:textSize="20sp"
         />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="86sp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
         />

    <EditText
        android:id="@+id/confirmed_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
  />

    <Button
        android:id="@+id/add_payment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:text="@string/add_payment"
        android:enabled="false"
        android:background="@drawable/custom_button_states"
        android:textColor="@color/colorButtonText"
        />

    </LinearLayout>

</ScrollView>