<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300sp"
    android:layout_height="300sp"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    android:background="@drawable/custom_popup"
    android:padding="20sp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bike_returned"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deposit_warning"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/final_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginBottom="46sp">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_states"
            android:textColor="@color/colorButtonText"
            android:text="@string/ok"
            android:layout_marginStart="4sp"
            />

    </LinearLayout>

</LinearLayout>