<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".BikeDetailsActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginStart="60sp"
            android:layout_marginEnd="60sp">


            <TextView
                android:id="@+id/bike_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20sp"
                android:textSize="25sp"
                android:text="@string/bike_id"/>



<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="16sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="32sp">

    <TextView
        android:id="@+id/charge_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charge_level"
        android:textSize="15sp"
        />
    </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/charge_val_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/availability_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/availability"
                    android:textSize="15sp"></TextView>



            </LinearLayout>
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="32sp">

            <Button
                android:id="@+id/rent_bike_button"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_states"
                android:textColor="@color/colorButtonText"
                android:text="@string/rent_bike"
                android:layout_marginEnd="4sp"
                 />

            <Button
                android:id="@+id/reserve_bike_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_states"
                android:textColor="@color/colorButtonText"
                android:text="@string/reserve_bike"
                android:layout_marginStart="4sp"
                 />


        </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
